# scheduling-kit

./: .bazelrc  .envrc  .gitignore  AGENTS.md  BUILD.bazel  Dockerfile.middleware  LICENSE  LLMS.txt  MODULE.bazel  README.md  env.test.local.example  eslint.config.js  flake.nix  llms.txt  mkdocs.yml  modal-app.py  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vitest.component.config.ts  vitest.config.ts  vitest.integration.config.ts  vitest.live.config.ts
.github/workflows/: ci.yml  publish.yml
cassettes/: .gitkeep
docs/: build-and-release.md  index.md  testing.md  tracing.md
scripts/: check-release-metadata.mjs  generate-doc-artifacts.mjs  refresh-traces.ts  update-fixtures.ts
src/: index.ts
src/adapters/: acuity-scraper.ts  acuity.ts  availability-engine.ts  calcom.ts  homegrown.ts  index.ts  types.ts
src/adapters/__tests__/: availability-engine.test.ts  homegrown-adapter.test.ts
src/components/: AcuityEmbedHandoff.svelte  BookingConfirmation.svelte  CheckoutDrawer.svelte  ClientForm.svelte  DateTimePicker.svelte  HybridCheckoutDrawer.svelte  PaymentSelector.svelte  ProviderPicker.svelte  ServicePicker.svelte  StripeCheckout.svelte  VenmoButton.svelte  VenmoCheckout.svelte  index.ts
src/core/: cache.ts  index.ts  pipelines.ts  types.ts  utils.ts
src/lib/: acuity-listener.ts  index.ts  url-builder.ts
src/middleware/: acuity-wizard.ts  browser-service.ts  errors.ts  index.ts  logger.ts  remote-adapter.ts  selector-health.ts  selectors.ts  server.ts  service-resolver.ts  slot-parser.ts  wizard-calendar.ts  wizard-service.ts
src/middleware/__tests__/: acuity-wizard.test.ts  browser-service.test.ts  errors.test.ts  remote-adapter.test.ts  selectors.test.ts  service-resolver.test.ts  slot-parser.test.ts  wizard-calendar.test.ts
src/middleware/steps/: bypass-payment.ts  extract-business.ts  extract.ts  fill-form.ts  index.ts  navigate.ts  read-availability.ts  read-slots.ts  read-via-url.ts  submit.ts
src/middleware/steps/__tests__/: extract-business.test.ts  fixtures.ts
src/onboarding/: factory.ts  index.ts  status.ts  types.ts
src/onboarding/__tests__/: onboarding.test.ts
src/onboarding/paypal/: configure.ts  webhook.ts
src/onboarding/stripe/: account.ts  configure.ts  oauth.ts  webhook.ts
src/payments/: index.ts  manual.ts  stripe.ts  types.ts  venmo.ts
src/reconciliation/: index.ts  matcher.ts  types.ts  webhook.ts
src/stores/: checkout.svelte.ts  index.ts
src/testing/: cassette.ts  index.ts  masking.ts  player.ts  recorder.ts
src/tests/: cache.test.ts  helpers.test.ts  hybrid-checkout-capabilities.test.ts  mocks.test.ts  payments-capabilities.test.ts  payments.test.ts  setup.ts  tracing.test.ts  types.test.ts  url-builder.test.ts  utils.test.ts
src/tests/components/: client-form.test.ts  date-time-picker.test.ts  hybrid-checkout-state.test.ts
src/tests/fixtures/: bookings.ts  index.ts  providers.ts  services.ts
src/tests/fixtures/acuity/: appointment-types.json  appointment.json  availability-dates.json  availability-times.json  calendars.json
src/tests/helpers/: effect.ts  factories.ts  fp-ts.ts  index.ts
src/tests/mocks/: index.ts  server.ts
src/tests/mocks/handlers/: acuity.ts  index.ts  paypal.ts  stripe.ts
src/tests/unit/adapters/: acuity-transformers.test.ts
src/tests/unit/core/: pipelines.test.ts  wizard-pipeline.test.ts
src/tests/unit/payments/: stripe.test.ts  venmo.test.ts
tests/e2e/: client-form.test.ts  payment-selector.test.ts  service-picker.test.ts  setup.ts
tests/integration/: acuity.test.ts  booking-flow.test.ts
tests/live/: acuity.live.test.ts  middleware-wizard.live.test.ts  selector-health.live.test.ts  smoke-booking.live.test.ts
